[tool.poetry]
name = "vitaltracker"
version = "0.0.1"
description = "Tracking mood and fitness"
authors = ["cyclux <nevermind@cyclux.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
pandas = "^2.0.1"
pyarrow = "^14.0.2"
tqdm = "^4.65.0"
streamlit = "^1.30.0"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
plotly = "^5.18.0"
ipywidgets = "^8.1.1"
ipykernel = "^6.29.0"
nbformat = "^5.9.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
ipykernel = "^6.22.0"
ipywidgets = "^8.0.6"
ruff = "^0.1.13"
pandas-stubs = "^2.1.4.231227"

[tool.pytest.ini_options]
pythonpath = ["."]
